Added More Styles to Remainder Modal
Included remainder color in the header of the remainder modal, also set the footer from fixed to sticky.

--- a/src/static/global.scss
+++ b/src/static/global.scss
@@ -45,3 +45,19 @@
         background-color: #CCCC00 !important;
     }
 }
+
+.RCFF6666 {
+    background-color: rgba($color: #FF6666, $alpha: 0.3);
+}
+.RCEEEEEE {
+    background-color: rgba($color: #EEEEEE, $alpha: 0.3);
+}
+.RC95E1AD {
+    background-color: rgba($color: #95E1AD, $alpha: 0.3);
+}
+.RC43A3EC {
+    background-color: rgba($color: #43A3EC, $alpha: 0.3);
+}
+.RCFFFF99 {
+    background-color: rgba($color: #FFFF99, $alpha: 0.3);
+}
