--- a/src/app/components/Calendar/Calendar.module.scss
+++ b/src/app/components/Calendar/Calendar.module.scss
@@ -31,6 +31,7 @@
         padding-left: 5px;
         border-radius: 2px;
         cursor: pointer;
+        color: #555;
 
         &:hover {
             background-color: #EEEEEE;
